--- a/index.html
+++ b/index.html
@@ -70,9 +70,68 @@
 
 	</nav> <!-- .navBar END -->
 
+	<!-- header section -->
+	<header>
+		<!-- image container -->
+		<div class="headerImgContainer wrapper">
+			<img src="./assets/header-image.jpg" alt="A child in overalls playing with colourful wooden blocks on the floor">
+		</div>
+		<!-- text container -->
+		<div class="headerContent wrapper">
+			<div class="contentContainer">
+				<h5>Handcrafted for kids</h5>
+				<h3>Go on, let them play with wooden blocks.</h3>
+				<p>Sed gravida eu ac aliquam pellentesque pharetra pharetra. Augue nam facilisis tristique turpis iaculis pulvinar tellus.</p>
+				<a class="button">Shop All</a>
+			</div> <!-- end .headerContent-->
+		</div><!-- headerImgContainer end -->
+
+	</header>
+
 
     
-	<main id="mainContent"></main>
+	<main id="mainContent">
+
+		<section class="categories" id="categories">
+			<div class="wrapper">
+				<h2>Categories</h2>
+				<p>Explore our range of hand-made toys</p>
+				<ul class="categoryGallery">
+					<li class="items itemOne">
+						<a href="">
+							<img src="./assets/safari-trio.jpg" alt="Hand-carved safari animal toys">
+							<h4>Safari</h4>
+							<p>Land-dwelling African Favourites</p>
+						</a>
+					</li>
+					<li class="items itemTwo">
+						<a href="">
+							<img src="./assets/ocean-trio.jpg" alt="A collection of ocean-themed animal toys">
+							<h4>Ocean</h4>
+							<p>Adorable Aquatic Characters</p>
+						</a>
+					 </li>
+					 <li class="items itemThree">
+						 <a href="">
+							 <img src="./assets/dino-trio.jpg" alt="Hand-carved dinosaur toys for kids">
+							 <h4>Dinos</h4>
+							 <p>Meet These Prehistoric Pals</p>
+						 </a>
+					 </li>
+					 <li class="items itemFour">
+						 <a href="">
+							 <img src="./assets/sale.jpg" alt="A toddler pulling two wooden animals on wheels">
+							 <h4>Sale</h4>
+							 <p>Act Quickly and Grab These Bargains</p>
+						 </a>
+					 </li>
+				 </ul> <!-- .categoryGallery END-->
+			 </div> <!-- .wrapper END-->
+		</section> <!-- .categories END-->
+
+
+
+	</main>
 
 
 </body>
