--- a/index.html
+++ b/index.html
@@ -73,18 +73,18 @@
 	<!-- header section -->
 	<header>
 		<!-- image container -->
-		<div class="headerImgContainer wrapper">
+		<div class="headerImgContainer">
 			<img src="./assets/header-image.jpg" alt="A child in overalls playing with colourful wooden blocks on the floor">
 		</div>
 		<!-- text container -->
-		<div class="headerContent wrapper">
-			<div class="contentContainer">
+		<!-- <div class="headerContent wrapper"> -->
+			<div class="headerContentContainer">
 				<h5>Handcrafted for kids</h5>
 				<h3>Go on, let them play with wooden blocks.</h3>
 				<p>Sed gravida eu ac aliquam pellentesque pharetra pharetra. Augue nam facilisis tristique turpis iaculis pulvinar tellus.</p>
 				<a class="button">Shop All</a>
 			</div> <!-- end .headerContent-->
-		</div><!-- headerImgContainer end -->
+		<!-- </div>headerImgContainer end -->
 
 	</header>
 
