--- a/index.html
+++ b/index.html
@@ -202,6 +202,10 @@
 							<li>
 								<a href="">Changelog</a>
 							</li>
+							</li>
+							<li>
+								<a href="">La la la la la</a>
+							</li>
 						</ul>
 					</nav>
 				</div> <!-- .footerNav END -->
