--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 								<h5>About</h5>
 							</li>
 							<li>
-								<a href="">About Us</a>
+								<a href="">About Us?</a>
 							</li>
 							<li>
 								<a href="">FAQ</a>
@@ -204,7 +204,7 @@
 							</li>
 							</li>
 							<li>
-								<a href="">La la la la  la</a>
+								<a href="">La la</a>
 							</li>
 						</ul>
 					</nav>
